Improved home page and UI (added logout button, username showed), implemented VM editing system, added basic startvm page

--- a/virtman/manager/templates/add.html
+++ b/virtman/manager/templates/add.html
@@ -1,5 +1,5 @@
 <h1>Add new VM</h1>
-<form action="{% url 'listing' %}"
+<form action="add"
       method="post">
       {% csrf_token %}
       {{ form.as_p }}
