--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -1,3 +1,4 @@
+Username: {{username}} <a href="/manager/home">Home</a> <a href="/manager/add">Add</a> <a href="/accounts/logout">Logout</a>
 {% if VM_list %}
     <ul>
     {% for vm in VM_list %}
