--- a/virtman/manager/templates/index.html
+++ b/virtman/manager/templates/index.html
@@ -1,3 +1,13 @@
 
 <p>Hi there, welcome!</p>
-<a href="/accounts/login"> Click here to login</a>
+<a href="/manager/listing"> Listing Page</a>
+
+{% if username != "" %}
+    <p>Username: {{ username }}</p>
+    <a href="/accounts/logout">Logout</a>
+
+{% elif username == "" %}
+    <p>Not logged in</p>
+    <a href="/accounts/login"> Login</a>
+
+{% endif %}
