Implemented Basic ISO Upload, change disk path

--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -8,3 +8,4 @@ Username: {{username}} <a href="/manager/home">Home</a> <a href="/manager/add">A
 {% else %}
     <p>No VMs are available.</p>
 {% endif %}
+<a href="/manager/createDisk">Create Storage Disk</a>
