Added removal of existing XMLs + added iso button

--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -9,3 +9,4 @@ Username: {{username}} <a href="/manager/home">Home</a> <a href="/manager/add">A
     <p>No VMs are available.</p>
 {% endif %}
 <a href="/manager/createDisk">Create Storage Disk</a>
+<a href="/manager/uploadISO">Choose ISO</a>
