--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -10,3 +10,4 @@ Username: {{username}} <a href="/manager/home">Home</a> <a href="/manager/add">A
 {% endif %}
 <a href="/manager/createDisk">Create Storage Disk</a>
 <a href="/manager/uploadISO">Choose ISO</a>
+<a href="/manager/viewStats">View Host Statistics</a>
