CPU + mem charts

--- a/virtman/manager/templates/host_stats.html
+++ b/virtman/manager/templates/host_stats.html
@@ -1,1 +1,45 @@
-{{cpu_usage}}
+{% extends "base.html" %}
+
+{% block content %}
+<meta http-equiv="refresh" content="5">
+This pages automatically refreshes after 5 seconds
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
+<canvas id="chart" style="width: 40%; height: 10vh"></canvas>
+
+<script>
+let ctx = document.getElementById("chart").getContext("2d");
+
+let chart = new Chart(ctx, {
+    reponsive: true,
+    type: "bar",
+    data: {
+        labels: ["CPU Usage","Memory Usage","Disk Usage"],
+        datasets: [
+            {
+            label: "CPU Usage",
+            backgroundColor: "#79AEC8",
+            borderColor: "#417690",
+            data: [{{cpu_usage}},{{mem_usage}},{{disk_usage}}]
+        }
+    ]
+  },
+  options: {
+     title: {
+        text: "CPU Utilization graph per core",
+        display: true
+     },
+     scales: {
+        yAxes: [{
+            ticks: {
+                min : 0,
+                max: 100
+            }
+        }]
+    }
+  }
+});
+</script>
+
+
+{% endblock %}
