--- a/virtman/manager/templates/add.html
+++ b/virtman/manager/templates/add.html
@@ -1,3 +1,6 @@
+<{% extends "base.html" %}
+
+{% block content %}
 <h1>Add new VM</h1>
 <form action="add"
       method="post">
@@ -5,3 +8,4 @@
       {{ form.as_p }}
 <button class="button" type="submit">Create</button>
 </form>>
+{% endblock content %}
