--- a/virtman/manager/templates/edit.html
+++ b/virtman/manager/templates/edit.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>Edit VM</h1>
 <form action="edit"
       method="post">
@@ -5,3 +8,4 @@
       {{ form.as_p }}
 <button class="button" type="submit">Create</button>
 </form>>
+{% endblock content %}
