--- a/virtman/manager/templates/index.html
+++ b/virtman/manager/templates/index.html
@@ -1,13 +1,14 @@
+{% extends "base.html"%}
 
+{% block content %}
 <p>Hi there, welcome!</p>
 
 {% if username != "" %}
     <a href="/manager/listing"> Listing Page</a>
-    <p>Username: {{ username }}</p>
-    <a href="/accounts/logout">Logout</a>
 
 {% elif username == "" %}
     <p>Not logged in</p>
     <a href="/accounts/login"> Login</a>
 
 {% endif %}
+{%endblock content %}
