--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -1,8 +1,10 @@
-Username: {{username}} <a href="/manager/home">Home</a> <a href="/manager/add">Add</a> <a href="/accounts/logout">Logout</a>
+{% extends "base.html" %}
+
+{% block content %}
 {% if VM_list %}
     <ul>
     {% for vm in VM_list %}
-        <p>Name: {{vm.name}} CPUs: {{vm.cpus}} RAM: {{vm.ram}} Hypervisor: {{vm.hypervisor}} OS: {{vm.os}} xml: {{vm.xml}} <a href="/manager/{{ vm.id }}/edit">Edit</a>  <a href="/manager/{{ vm.id }}/delete">Delete</a>  <a href="/manager/{{ vm.id }}/startVM">Start</a> <a href="/manager/{{ vm.id }}/stopVM">Stop</a> <a href="/manager/{{ vm.id }}/edit">Edit</a>  <a href="/manager/{{ vm.id }}/delete">Delete</a>  <a href="/manager/{{ vm.id }}/startVM">Start</a> <a href="/manager/{{ vm.id }}/viewStats">View Stats</a></p>
+        <p>Name: {{vm.name}} CPUs: {{vm.cpus}} RAM: {{vm.ram}} Hypervisor: {{vm.hypervisor}} OS: {{vm.os}} xml: {{vm.xml}} <a href="/manager/{{ vm.id }}/edit">Edit</a>  <a href="/manager/{{ vm.id }}/delete">Delete</a>  <a href="/manager/{{ vm.id }}/startVM">Start</a> <a href="/manager/{{ vm.id }}/stopVM">Stop</a> <a href="/manager/{{ vm.id }}/viewStats">View Stats</a></p>
     {% endfor %}
     </ul>
 {% else %}
@@ -11,3 +13,4 @@ Username: {{username}} <a href="/manager/home">Home</a> <a href="/manager/add">A
 <a href="/manager/createDisk">Create Storage Disk</a>
 <a href="/manager/uploadISO">Choose ISO</a>
 <a href="/manager/viewStats">View Host Statistics</a>
+{% endblock content %}
