--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -1,3 +1,51 @@
-{{username}} <a href="/manager/home">Home</a> <a href="/accounts/logout">Logout</a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Virtman</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Virtman</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/manager/home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/manager/listing">Listing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/manager/viewStats">Stats</a>
+      </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      {% if user.is_authenticated %}
+      <li class="navbar-text">
+      {{user.get_username}}
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/accounts/logout">Logout</a>
+      </li>
+      {% else %}
+        <a class="nav-link" href="/accounts/login">Login</a>
+      {% endif %}
+      </ul>
+</nav>
 
-{% block content %}{% endblock content %}
+
+
+	<div id="content" name="content" class="main">
+		<div class="row justify-content-center">
+			<div class="col-8">
+				<h1 class="mt-2">Virtman</h1>
+				<hr class="mt-0 mb-4">
+				{% block content %}
+				{% endblock %}
+			</div>
+		</div>
+	</div>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
+</html>
