--- a/virtman/manager/templates/createDisk.html
+++ b/virtman/manager/templates/createDisk.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <h1>Create New Disk</h1>
 <form action="createDisk"
       method="post">
@@ -5,3 +7,4 @@
       {{ form.as_p }}
 <button class="button" type="submit">Create</button>
 </form>>
+{% endblock content %}
