--- a/virtman/manager/templates/isoUpload.html
+++ b/virtman/manager/templates/isoUpload.html
@@ -1,6 +1,9 @@
+{% extends "base.html"%}
+{% block content %}
 <h1>Upload ISO</h1>
 <form action="uploadISO" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
 <button class="button" type="submit">Create</button>
 </form>>
+{% endblock content %}
