--- a/virtman/manager/templates/stats.html
+++ b/virtman/manager/templates/stats.html
@@ -1,6 +1,8 @@
+{% extends "base.html" %}
+
+{% block content %}
 CPU Usage: {{cpu_stats}}
 
 <br>Disk read requests: {{disk_stats.0}}, Bytes read {{disk_stats.1}}, Write requests sent {{disk_stats.2}}, Bytes Written {{disk_stats.3}}, Number of errors: {{disk_stats.4}}
 <br>Memory used: {{memory_stats}}
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+{% endblock content %}
