--- a/virtman/manager/templates/add.html
+++ b/virtman/manager/templates/add.html
@@ -7,5 +7,5 @@
       {% csrf_token %}
       {{ form.as_p }}
 <button class="button" type="submit">Create</button>
-</form>>
+</form>
 {% endblock content %}
