--- a/virtman/manager/templates/edit.html
+++ b/virtman/manager/templates/edit.html
@@ -5,6 +5,6 @@
       method="post">
       {% csrf_token %}
       {{ form.as_p }}
-<button class="button" type="submit">Create</button>
-</form>>
+<button class="btn btn-primary" type="submit">Create</button>
+</form>
 {% endblock content %}
