Checkbox delete mechanism working, buttons reorder

--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="dropdown show">
-<form id="DeleteVM"> </form>
+
 <a class="btn btn-primary" href="/manager/add">Add VM</a>
 <a class="btn btn-primary" href="/manager/createDisk">Create Disk</a>
 <a class="btn btn-primary" href="/manager/uploadISO">Choose ISO</a>
@@ -20,12 +20,12 @@
       <th scope="col">Hypervisor</th>
       <th scope="col">Actions</th>
       <th scope="col">State</th>
-      <th scope="col" style="text-align: center"><button form="DeleteVM" type="submit" formmethod="post" class="btn btn-primary">Delete</button></th>
+      <th scope="col" style="text-align: center"><button type="submit" class="btn btn-primary" form="delete_form">Delete</button></th>
     </tr>
   </thead>
   <tbody>
     {% for vm in VM_list %}
-        <tr>    
+        <tr>
         <th scope="row">{{ forloop.counter}}</th>
         <td>{{vm.name}}</td>
         <td>{{vm.cpus}} Cores</td>
@@ -35,37 +35,42 @@
         <td>
         {% if vm.state == 'ON' %}
         <button type="button" class="btn btn-primary" disabled>Start</button>
+        <button type="button" class="btn btn-primary" disabled>Edit</button>
         <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Stop
+        Stop
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" href="#">Shutdown</a>
           <a class="dropdown-item" href="#">Restart</a>
           <a class="dropdown-item" href="/manager/{{ vm.id }}/stopVM">Force Off</a>
         </div>
-        <br>
         <a class="btn btn-primary" href="/manager/{{ vm.id }}/viewStats">Stats</a> 
-        <a class="btn btn-primary" href="/manager/{{ vm.id }}/edit">Edit</a>
+        
+        
         {% else %}
-        <a class="btn btn-primary" href="/manager/{{ vm.id }}/startVM">Start </a>
-        <button type="button" class="btn btn-primary dropdown-toggle" disabled>Stop</button>
-        <br>
+        <a class="btn btn-primary" href="/manager/{{ vm.id }}/startVM">Start</a>
+        <a class="btn btn-primary" href="/manager/{{ vm.id }}/edit">Edit</a>
+        <button type="button" class="btn btn-primary dropdown-toggle" disabled>Stop </button>
         <button type="button" class="btn btn-primary" disabled>Stats</button>
-        <button type="button" class="btn btn-primary" disabled>Edit</button>
         {% endif %}
         {% if vm.state == "ON" %}
         <td>Running</td>
-        <td style="text-align: center"><input class="form-check-input" type="checkbox" value="" name="VMs" id="{{vm.id}}"></td>
+        <td style="text-align: center"><input class="form-check-input" type="checkbox" disabled></td>
         {% else %}
         <td>Stopped</td>
-        <td style="text-align: center"><input class="form-check-input" type="checkbox" value="" disabled></td>
+        <td style="text-align: center"><input class="form-check-input" form="delete_form" type="checkbox" value="{{ vm.id }}" id="{{ vm.id }}" name="VMs"></td>
         {% endif %}
         </td>
         </tr>
     {% endfor %}
   </tbody>
 </table>
+
 {% else %}
 There are no VMs available
 {% endif %}
+
+<form method="post" id="delete_form">
+{% csrf_token %}
+</form>
 {% endblock content %}
