--- a/virtman/manager/templates/add.html
+++ b/virtman/manager/templates/add.html
@@ -6,6 +6,6 @@
       method="post">
       {% csrf_token %}
       {{ form.as_p }}
-<button class="button" type="submit">Create</button>
+<button class="btn btn-primary" type="submit">Create</button>
 </form>
 {% endblock content %}
