--- a/virtman/manager/templates/edit.html
+++ b/virtman/manager/templates/edit.html
@@ -5,6 +5,6 @@
       method="post">
       {% csrf_token %}
       {{ form.as_p }}
-<button class="btn btn-primary" type="submit">Create</button>
+<button class="btn btn-primary" type="submit">Submit</button>
 </form>
 {% endblock content %}
