Implemented dark mode toggle

--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -3,36 +3,49 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <style>
+    .dark-mode {
+      background-color: #222;
+      color: white;
+    }
+    </style>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Virtman</title>
   </head>
+  
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Virtman</a>
-        <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="/manager/home">Home</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/manager/listing">Listing</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/manager/viewStats">Stats</a>
-        </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-        {% if user.is_authenticated %}
-        <li class="navbar-text">
-        {{user.get_username}}
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/accounts/logout">Logout</a>
-        </li>
-        {% else %}
-            <a class="nav-link" href="/accounts/login">Login</a>
-        {% endif %}
-        </ul>
-</nav>
+  <a class="navbar-brand" href="#">Virtman</a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+        <a class="nav-link" href="/manager/home">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/manager/listing">Listing</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/manager/viewStats">Stats</a>
+    </li>
+  </ul>
+  
+  <ul class="nav navbar-nav navbar-right">
+    <li class="nav-item">
+      <button class="btn btn-primary" onclick="myFunction()">Mode</button>
+    </li>
+    {% if user.is_authenticated %}
+    <li class="navbar-text">
+      {{user.get_username}}
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/accounts/logout">Logout</a>
+    </li>
+    {% else %}
+        <a class="nav-link" href="/accounts/login">Login</a>
+    {% endif %}
+  </ul>
+  </nav>
 	<div id="content" name="content" class="main">
 		<div class="row justify-content-center">
 			<div class="col-11">
@@ -43,8 +56,17 @@
 			</div>
 		</div>
 	</div>
-  </body>
+</body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
+
 </html>
