--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -4,19 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
+    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Virtman</title>
     <style>
-    .dark-mode {
+    body {
       background-color: #222;
       color: white;
     }
     </style>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>Virtman</title>
   </head>
   
   <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Virtman</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
@@ -32,7 +32,7 @@
   
   <ul class="nav navbar-nav navbar-right">
     <li class="nav-item">
-      <button class="btn btn-primary" onclick="myFunction()">Mode</button>
+        <a class="btn btn-primary" href="/manager/toggleAdvancedMode">Toggle user Mode</a>
     </li>
     {% if user.is_authenticated %}
     <li class="navbar-text">
@@ -50,23 +50,17 @@
 		<div class="row justify-content-center">
 			<div class="col-11">
 				<h1 class="mt-2">Virtman</h1>
-				<hr class="mt-0 mb-4">
+        {% if user.profile.advanced_mode == False %}
+        <h4 align="right" class="mt-2">Simple Mode</h4>
+				{% else %}
+        <h4 align="right" class="mt-2">Advanced Mode</h4>
+        {% endif %}
+        <hr class="mt-0 mb-4">
 				{% block content %}
 				{% endblock %}
 			</div>
 		</div>
 	</div>
 </body>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-<script>
-function myFunction() {
-   var element = document.body;
-   element.classList.toggle("dark-mode");
-}
-</script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </html>
