--- a/virtman/manager/templates/isoUpload.html
+++ b/virtman/manager/templates/isoUpload.html
@@ -4,6 +4,6 @@
 <form action="uploadISO" method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
-<button class="button" type="submit">Create</button>
-</form>>
+<button class="btn btn-primary" type="submit">Upload</button>
+</form>
 {% endblock content %}
