--- a/virtman/manager/templates/stats.html
+++ b/virtman/manager/templates/stats.html
@@ -5,4 +5,47 @@ CPU Usage: {{cpu_stats}}
 
 <br>Disk read requests: {{disk_stats.0}}, Bytes read {{disk_stats.1}}, Write requests sent {{disk_stats.2}}, Bytes Written {{disk_stats.3}}, Number of errors: {{disk_stats.4}}
 <br>Memory used: {{memory_stats}}
+
+<meta http-equiv="refresh" content="5">
+This pages automatically refreshes after 5 seconds
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
+<canvas id="chart" style="width: 40%; height: 25vh"></canvas>
+
+<script>
+let ctx = document.getElementById("chart").getContext("2d");
+
+let chart = new Chart(ctx, {
+    reponsive: true,
+    type: "bar",
+    data: {
+        labels: ["CPU Usage","Memory Usage","Disk Usage"],
+        datasets: [
+            {
+            label: "CPU Usage",
+            backgroundColor: "#79AEC8",
+            borderColor: "#417690",
+            data: [{{cpu_stats}},{{memory_usage}},{{disk_usage}}]
+        }
+    ]
+  },
+  options: {
+     title: {
+        text: "CPU Utilization graph per core",
+        display: true
+     },
+     scales: {
+        yAxes: [{
+            ticks: {
+                min : 0,
+                max: 100
+            }
+        }]
+    }
+  }
+});
+</script>
+
+
+
 {% endblock content %}
