--- a/virtman/manager/templates/novnc/vnc.html
+++ b/virtman/manager/templates/novnc/vnc.html
@@ -19,40 +19,40 @@
     <meta charset="utf-8">
 
     <!-- Icons (see app/images/icons/Makefile for what the sizes are for) -->
-    <link rel="icon" sizes="16x16" type="image/png" href="{% static 'novnc/app/images/icons/novnc-16x16.png' %}">
-    <link rel="icon" sizes="24x24" type="image/png" href="{% static 'novnc/app/images/icons/novnc-24x24.png' %}">
-    <link rel="icon" sizes="32x32" type="image/png" href="{% static 'novnc/app/images/icons/novnc-32x32.png' %}">
-    <link rel="icon" sizes="48x48" type="image/png" href="{% static 'novnc/app/images/icons/novnc-48x48.png' %}">
-    <link rel="icon" sizes="60x60" type="image/png" href="{% static 'novnc/app/images/icons/novnc-60x60.png' %}">
-    <link rel="icon" sizes="64x64" type="image/png" href="{% static 'novnc/app/images/icons/novnc-64x64.png' %}">
-    <link rel="icon" sizes="72x72" type="image/png" href="{% static 'novnc/app/images/icons/novnc-72x72.png' %}">
-    <link rel="icon" sizes="76x76" type="image/png" href="{% static 'novnc/app/images/icons/novnc-76x76.png' %}">
-    <link rel="icon" sizes="96x96" type="image/png" href="{% static 'novnc/app/images/icons/novnc-96x96.png' %}">
-    <link rel="icon" sizes="120x120" type="image/png" href="{% static 'novnc/app/images/icons/novnc-120x120.png' %}">
-    <link rel="icon" sizes="144x144" type="image/png" href="{% static 'app/images/icons/novnc-144x144.png' %}">
-    <link rel="icon" sizes="152x152" type="image/png" href="app/images/icons/novnc-152x152.png">
-    <link rel="icon" sizes="192x192" type="image/png" href="app/images/icons/novnc-192x192.png">
+    <link rel="icon" sizes="16x16" type="image/png" href="statics/novnc/app/images/icons/novnc-16x16.png">
+    <link rel="icon" sizes="24x24" type="image/png" href="statics/novnc/app/images/icons/novnc-24x24.png">
+    <link rel="icon" sizes="32x32" type="image/png" href="statics/novnc/app/images/icons/novnc-32x32.png">
+    <link rel="icon" sizes="48x48" type="image/png" href="statics/novnc/app/images/icons/novnc-48x48.png">
+    <link rel="icon" sizes="60x60" type="image/png" href="statics/novnc/app/images/icons/novnc-60x60.png">
+    <link rel="icon" sizes="64x64" type="image/png" href="statics/novnc/app/images/icons/novnc-64x64.png">
+    <link rel="icon" sizes="72x72" type="image/png" href="statics/novnc/app/images/icons/novnc-72x72.png">
+    <link rel="icon" sizes="76x76" type="image/png" href="statics/novnc/app/images/icons/novnc-76x76.png">
+    <link rel="icon" sizes="96x96" type="image/png" href="statics/novnc/app/images/icons/novnc-96x96.png">
+    <link rel="icon" sizes="120x120" type="image/png" href="statics/novnc/app/images/icons/novnc-120x120.png'">
+    <link rel="icon" sizes="144x144" type="image/png" href="statics/novnc/app/images/icons/novnc-144x144.png">
+    <link rel="icon" sizes="152x152" type="image/png" href="statics/novnc/app/images/icons/novnc-152x152.png">
+    <link rel="icon" sizes="192x192" type="image/png" href="statics/novnc/app/images/icons/novnc-192x192.png">
     <!-- Firefox currently mishandles SVG, see #1419039
     <link rel="icon" sizes="any" type="image/svg+xml" href="app/images/icons/novnc-icon.svg">
     -->
     <!-- Repeated last so that legacy handling will pick this -->
-    <link rel="icon" sizes="16x16" type="image/png" href="{% static 'novnc/app/images/icons/novnc-16x16.png' %}">
+    <link rel="icon" sizes="16x16" type="image/png" href="statics/novnc/app/images/icons/novnc-16x16.png">
 
     <!-- Apple iOS Safari settings -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <!-- Home Screen Icons (favourites and bookmarks use the normal icons) -->
-    <link rel="apple-touch-icon" sizes="60x60" type="image/png" href="{% static 'novnc/app/images/icons/novnc-60x60.png' %}">
-    <link rel="apple-touch-icon" sizes="76x76" type="image/png" href="{% static 'novnc/app/images/icons/novnc-76x76.png' %}">
-    <link rel="apple-touch-icon" sizes="120x120" type="image/png" href="{% static 'novnc/app/images/icons/novnc-120x120.png' %}">
-    <link rel="apple-touch-icon" sizes="152x152" type="image/png" href="{%static 'novnc/app/images/icons/novnc-152x152.png' %}">
+    <link rel="apple-touch-icon" sizes="60x60" type="image/png" href="statics/novnc/app/images/icons/novnc-60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" type="image/png" href="statics/novnc/app/images/icons/novnc-76x76.png">
+    <link rel="apple-touch-icon" sizes="120x120" type="image/png" href="statics/novnc/app/images/icons/novnc-120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" type="image/png" href="statics/novnc/app/images/icons/novnc-152x152.png">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="{% static 'novnc/app/styles/base.css' %}">
+    <link rel="stylesheet" href="statics/novnc/app/styles/base.css">
 
-    <script src="app/error-handler.js"></script>
-    <script type="module" crossorigin="anonymous" src="novnce/app/ui.js"></script>
+    <script src="statics/novnc/app/error-handler.js"></script>
+    <script type="module" crossorigin="anonymous" src="statics/novnc/app/ui.js"></script>
 </head>
 
 <body>
@@ -76,51 +76,51 @@
             <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
 
             <!-- Drag/Pan the viewport -->
-            <input type="image" alt="Drag" src="app/images/drag.svg"
+            <input type="image" alt="Drag" src="statics/novnc/app/images/drag.svg"
                 id="noVNC_view_drag_button" class="noVNC_button noVNC_hidden"
                 title="Move/Drag Viewport">
 
             <!--noVNC Touch Device only buttons-->
             <div id="noVNC_mobile_buttons">
-                <input type="image" alt="Keyboard" src="app/images/keyboard.svg"
+                <input type="image" alt="Keyboard" src="statics/novnc/app/images/keyboard.svg"
                     id="noVNC_keyboard_button" class="noVNC_button" title="Show Keyboard">
             </div>
 
             <!-- Extra manual keys -->
-            <input type="image" alt="Extra keys" src="app/images/toggleextrakeys.svg"
+            <input type="image" alt="Extra keys" src="statics/novnc/app/images/toggleextrakeys.svg"
                 id="noVNC_toggle_extra_keys_button" class="noVNC_button"
                 title="Show Extra Keys">
             <div class="noVNC_vcenter">
             <div id="noVNC_modifiers" class="noVNC_panel">
-                <input type="image" alt="Ctrl" src="app/images/ctrl.svg"
+                <input type="image" alt="Ctrl" src="statics/novnc/app/images/ctrl.svg"
                     id="noVNC_toggle_ctrl_button" class="noVNC_button"
                     title="Toggle Ctrl">
-                <input type="image" alt="Alt" src="app/images/alt.svg"
+                <input type="image" alt="Alt" src="statics/novnc/app/images/alt.svg"
                     id="noVNC_toggle_alt_button" class="noVNC_button"
                     title="Toggle Alt">
-                <input type="image" alt="Windows" src="app/images/windows.svg"
+                <input type="image" alt="Windows" src="statics/novnc/app/images/windows.svg"
                     id="noVNC_toggle_windows_button" class="noVNC_button"
                     title="Toggle Windows">
-                <input type="image" alt="Tab" src="app/images/tab.svg"
+                <input type="image" alt="Tab" src="statics/novnc/app/images/tab.svg"
                     id="noVNC_send_tab_button" class="noVNC_button"
                     title="Send Tab">
-                <input type="image" alt="Esc" src="app/images/esc.svg"
+                <input type="image" alt="Esc" src="statics/novnc/app/images/esc.svg"
                     id="noVNC_send_esc_button" class="noVNC_button"
                     title="Send Escape">
-                <input type="image" alt="Ctrl+Alt+Del" src="app/images/ctrlaltdel.svg"
+                <input type="image" alt="Ctrl+Alt+Del" src="statics/novnc/app/images/ctrlaltdel.svg"
                     id="noVNC_send_ctrl_alt_del_button" class="noVNC_button"
                     title="Send Ctrl-Alt-Del">
             </div>
             </div>
 
             <!-- Shutdown/Reboot -->
-            <input type="image" alt="Shutdown/Reboot" src="app/images/power.svg"
+            <input type="image" alt="Shutdown/Reboot" src="statics/novnc/app/images/power.svg"
                 id="noVNC_power_button" class="noVNC_button"
                 title="Shutdown/Reboot...">
             <div class="noVNC_vcenter">
             <div id="noVNC_power" class="noVNC_panel">
                 <div class="noVNC_heading">
-                    <img alt="" src="app/images/power.svg"> Power
+                    <img alt="" src="statics/novnc/app/images/power.svg"> Power
                 </div>
                 <input type="button" id="noVNC_shutdown_button" value="Shutdown">
                 <input type="button" id="noVNC_reboot_button" value="Reboot">
@@ -129,13 +129,13 @@
             </div>
 
             <!-- Clipboard -->
-            <input type="image" alt="Clipboard" src="app/images/clipboard.svg"
+            <input type="image" alt="Clipboard" src="statics/novnc/app/images/clipboard.svg"
                 id="noVNC_clipboard_button" class="noVNC_button"
                 title="Clipboard">
             <div class="noVNC_vcenter">
             <div id="noVNC_clipboard" class="noVNC_panel">
                 <div class="noVNC_heading">
-                    <img alt="" src="app/images/clipboard.svg"> Clipboard
+                    <img alt="" src="statics/novnc/app/images/clipboard.svg"> Clipboard
                 </div>
                 <textarea id="noVNC_clipboard_text" rows=5></textarea>
                 <br>
@@ -145,19 +145,19 @@
             </div>
 
             <!-- Toggle fullscreen -->
-            <input type="image" alt="Fullscreen" src="app/images/fullscreen.svg"
+            <input type="image" alt="Fullscreen" src="statics/novnc/app/images/fullscreen.svg"
                 id="noVNC_fullscreen_button" class="noVNC_button noVNC_hidden"
                 title="Fullscreen">
 
             <!-- Settings -->
-            <input type="image" alt="Settings" src="app/images/settings.svg"
+            <input type="image" alt="Settings" src="statics/novnc/app/images/settings.svg"
                 id="noVNC_settings_button" class="noVNC_button"
                 title="Settings">
             <div class="noVNC_vcenter">
             <div id="noVNC_settings" class="noVNC_panel">
                 <ul>
                     <li class="noVNC_heading">
-                        <img alt="" src="app/images/settings.svg"> Settings
+                        <img alt="" src="statics/novnc/app/images/settings.svg"> Settings
                     </li>
                     <li>
                         <label><input id="noVNC_setting_shared" type="checkbox"> Shared Mode</label>
@@ -246,7 +246,7 @@
             </div>
 
             <!-- Connection Controls -->
-            <input type="image" alt="Disconnect" src="app/images/disconnect.svg"
+            <input type="image" alt="Disconnect" src="statics/novnc/app/images/disconnect.svg"
                 id="noVNC_disconnect_button" class="noVNC_button"
                 title="Disconnect">
 
@@ -265,7 +265,7 @@
         <div id="noVNC_connect_dlg">
             <div class="noVNC_logo" translate="no"><span>no</span>VNC</div>
             <div id="noVNC_connect_button"><div>
-                <img alt="" src="app/images/connect.svg"> Connect
+                <img alt="" src="statics/novnc/app/images/connect.svg"> Connect
             </div></div>
         </div>
     </div>
@@ -309,8 +309,8 @@
     </div>
 
     <audio id="noVNC_bell">
-        <source src="app/sounds/bell.oga" type="audio/ogg">
-        <source src="app/sounds/bell.mp3" type="audio/mpeg">
+        <source src="statics/novnc/app/sounds/bell.oga" type="audio/ogg">
+        <source src="statics/novnc/app/sounds/bell.mp3" type="audio/mpeg">
     </audio>
  </body>
 </html>
