--- a/virtman/manager/templates/novnc/vnc.html
+++ b/virtman/manager/templates/novnc/vnc.html
@@ -1,5 +1,9 @@
+{% extends "base.html" %}
 {% load static %}
+
 <!DOCTYPE html>
+
+{% block content %}
 <html lang="en" class="noVNC_loading">
 <head>
 
@@ -314,3 +318,4 @@
     </audio>
  </body>
 </html>
+{% endblock content %}
