--- a/virtman/manager/templates/listing.html
+++ b/virtman/manager/templates/listing.html
@@ -36,14 +36,13 @@
         {% if vm.state == 'ON' %}
         <button type="button" class="btn btn-primary" disabled>Start</button>
         <button type="button" class="btn btn-primary" disabled>Edit</button>
-        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Stop
-        </button>
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Stop</button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <a class="dropdown-item" href="/manager/{{ vm.id }}/shutdownVM">Shutdown</a>
           <a class="dropdown-item" href="/manager/{{ vm.id }}/restartVM">Restart</a>
           <a class="dropdown-item" href="/manager/{{ vm.id }}/stopVM">Force Off</a>
         </div>
+        <a class="btn btn-primary" href="/manager/{{ vm.id }}/vnc?host=localhost&port=6080">VNC</a>
         <a class="btn btn-primary" href="/manager/{{ vm.id }}/viewStats">Stats</a> 
         
         {% else %}
@@ -51,6 +50,7 @@
         <a class="btn btn-primary" href="/manager/{{ vm.id }}/edit">Edit</a>
         <button type="button" class="btn btn-primary dropdown-toggle" disabled>Stop </button>
         <button type="button" class="btn btn-primary" disabled>Stats</button>
+        <button type="button" class="btn btn-primary" disabled>VNC</button>
         {% endif %}
         {% if vm.state == "ON" %}
         <td>Running</td>
