--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -31,12 +31,9 @@
   </ul>
   
   <ul class="nav navbar-nav navbar-right">
-    <li class="nav-item">
-        <a class="btn btn-primary" href="/manager/toggleAdvancedMode">Toggle user Mode</a>
-    </li>
     {% if user.is_authenticated %}
-    <li class="navbar-text">
-      {{user.get_username}}
+    <li class="navbar-item">
+      <a class="nav-link" href="/manager/profile">{{user.get_username}}</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/accounts/logout">Logout</a>
