--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -28,6 +28,9 @@
     <li class="nav-item">
         <a class="nav-link" href="/manager/viewStats">Stats</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/manager/ISO">ISOs</a>
+    </li>
   </ul>
   
   <ul class="nav navbar-nav navbar-right">
