Added Disk deletion

--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -31,6 +31,9 @@
     <li class="nav-item">
         <a class="nav-link" href="/manager/ISO">ISOs</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/manager/Disks">Disks</a>
+    </li>
   </ul>
   
   <ul class="nav navbar-nav navbar-right">
