Implemented LXC containers, fixed host stats

--- a/virtman/manager/templates/Disk.html
+++ b/virtman/manager/templates/Disk.html
@@ -10,6 +10,7 @@
       <th scope="col">#</th>
       <th scope="col">Name</th>
       <th scope="col">Path</th>
+      <th scope="col">Type</th>
       <th scope="col" style="text-align: center"><button type="submit" class="btn btn-primary" form="delete_form">Delete</button></th>
     </tr>
   </thead>
@@ -19,6 +20,7 @@
         <th scope="row">{{ forloop.counter}}</th>
         <td>{{Disk.name}}</td>
         <td>{{Disk.path}}</td>
+        <td>{{Disk.type}}</td>
         <td style="text-align: center"><input class="form-check-input" form="delete_form" type="checkbox" value="{{ Disk.id }}" id="{{ Disk.id }}" name="Disks"></td>
         </td>
         </tr>
