--- a/virtman/manager/templates/form.html
+++ b/virtman/manager/templates/form.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Edit VM</h1>
-<form action="editCustomVM"
-      method="post">
+<h1>Create</h1>
+<form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
 <button class="btn btn-primary" type="submit">Create</button>
