--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -23,7 +23,7 @@
         <a class="nav-link" href="/manager/home">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/manager/listing">Listing</a>
+        <a class="nav-link" href="/manager/listing">VMs</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/manager/viewStats">Stats</a>
@@ -33,6 +33,9 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/manager/Disks">Disks</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/manager/containers">Containers</a>
     </li>
   </ul>
   
