--- a/virtman/manager/templates/base.html
+++ b/virtman/manager/templates/base.html
@@ -17,16 +17,10 @@
   
   <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Virtman</a>
+  <a class="navbar-brand" href="/manager/home">Virtman</a>
   <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-        <a class="nav-link" href="/manager/home">Home</a>
-    </li>
     <li class="nav-item">
         <a class="nav-link" href="/manager/listing">VMs</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/manager/viewStats">Stats</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/manager/ISO">ISOs</a>
@@ -36,6 +30,9 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/manager/containers">Containers</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/manager/viewStats">Stats</a>
     </li>
   </ul>
   
